--- a/Week5/Week5/Info.plist
+++ b/Week5/Week5/Info.plist
@@ -21,5 +21,7 @@
 			</array>
 		</dict>
 	</dict>
+	<key>NSCameraUsageDescription</key>
+	<string>This App si trying to access your camera</string>
 </dict>
 </plist>
